    `__call__` (Issue #2860, PR #2859)
  * deprecated ``analysis.helanal`` module has been removed in favour of
    ``analysis.helix_analysis`` (PR #2929)
  * Move water bridge analysis from hbonds to hydrogenbonds (Issue #2739 PR #2913)
  * `threadpoolctl` is required for installation (Issue #2860)
  * Added OpenMM coordinate and topology converters (Issue #2863, PR #2917)

Deprecations
  * The `analysis.align.AlignTraj.rmsd` attribute is now deprecated in
    favour of `analysis.align.AlignTraj.results.rmsd` (Issue #3278, #3261)
  * The `universe`, `positions`, and `rmsd` attributes of
    `analysis.align.AverageStructure` are now deprecated in favour of
    `results.universe`, `results.positions`, and `results.rmsd`
    (Issue #3278, #3261)
  * The `hbonds` attribute of
    `hydrogenbonds.hbond_analysis.HydrogenBondAnalysis.hbonds` is now
    deprecated in favour of `results.hbonds` (Issues #3271, #3261)
  * The `analysis.rms.RMSD.rmsd` and `analysis.rms.RMSF.rmsf` attributes are
    now deprecated in favour of `analysis.rms.RMSD.results.rmsd` and
    `analysis.rms.RMSF.results.rmsf` respectively. They will be removed in
    3.0.0 (Issues #3274, #3261)
  * The `angles` attribute for the `dihedrals` classes (Dihedral,
    Ramachandran, Janin) is now deprecated in favour of `results.angles`. It
    will be removed in 3.0.0 (Issue #3261)
  * The `analysis.Contacts.timeseries` attribute is now deprecated in favour of 
    `analysis.Contacts.results.timeseries`. It will be removed in 3.0.0
    (Issue #3261)
  * The `density` attribute of `analysis.density.DensityAnalysis` is now
    deprecated in favour of `results.density`. It will be removed in 3.0.0
    (Issue #3261)
  * The analysis.hbonds.hbond_autocorrel code has been moved to
    analysis.hydrogenbonds.hbond_autocorrel and will be removed
    from analysis.hbonds in 3.0.0 (PR #3258)
  * In 2.1.0 the TRZReader will default to a dt of 1.0 ps when failing to
    read it from the input TRZ trajectory.

